write about made things

--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<h1>テスト</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="chrome">
+        <title>いっそうのぽーとふぉりお</title>
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
+        <link rel="stylesheet" href="css/uikit-rtl.min.css">
+    </head>
+    <body class="uk-section  uk-padding-remove-vertical" >
+        <!-- ヘッダー部分 -->
+        <header class="uk-section uk-section-primary">
+            <div>
+                <h1>いっそうのぽーとふぉりお</h1>
+            </div> 
+        </header>
+        <div class="uk-section uk-section-default uk-padding-remove-vertical" >
+            
+            <div class="uk-section uk-section-muted uk-container uk-container-small uk-padding-remove-top">
+                <p></p>
+                <div class="uk-section uk-section-secondary uk-section-small">
+                    <h2>1.簡単な自己紹介</h2>
+                    <li>
+                        <ul>趣味でプログラミングをしてる高専一年生</ul>
+                        <ul>もともと中3のときからpythonを勉強してはいたけど開発をするようになったのは高専に入ってから</ul>
+                        <ul>艦これと音ゲーは神だと思う</ul>
+                    </li>
+                </div>
+                <p></p>
+                <div class="uk-section uk-section-secondary uk-section-small">
+                    <h2>2.使ってきた言語(軽くできる物も含む</h2>
+                    <li>
+                        <ul>Python, Kotlin, Dart, Java, C++, C#, (マークアップ言語も含むならHTML, CSS)</ul>
+                    </li>
+                </div>
+                <p></p>
+                <div class="uk-section uk-section-secondary uk-section-small">
+                    <h2>3.作ったもの</h2>
+                    <p style="font-size: 10px;">GitHub見ろ!!! と言いたいところだが一応書いておく</p>
+                    <li>
+                        <ul>艦これ用経験値計算web電卓(JavaScript/HTML/CSS)<a href="http://isso04240129.html.xdomain.jp/main.html">実物はこれ</a></ul>
+                        <ul>弊高専起業部(部活じゃない)の蔵書管理システム(Python->Django)</ul>
+                        <ul>discord用Bot(機能: リモート蔵書管理 メンバー表制作)(Python->discord.py)</ul>
+                        <ul>茨城高専の休講情報+お知らせ取得アプリ(Java->AndroidStudio)</ul>
+                        <ul>高齢者見守りスマートスピーカー(Python->discord.py)</ul>
+                        <ul>ゲーム用マッチングアプリ(Dart->Flutter)</ul>
+                    </li>
+                </div>
+            </div>
+        </div>
+        
+    </body>
+</html> 
