--- a/index.html
+++ b/index.html
@@ -24,22 +24,23 @@
                 <div class="uk-section uk-section-secondary uk-section-small">
                     <h2>1.簡単な自己紹介</h2>
                     <li>
+                        <ul><h4>概要</h4></ul>
                         <ul>
                             <li>
-                                <p>概要</p>
                                 <ul>趣味でプログラミングをしてる高専一年生</ul>
                             </li>
                         </ul>
-                        <ul>
-                        <li>
-                            <ul><h4>技術関連<h4></ul>
-                            <ul>もともと中3のときからpythonを勉強してはいたけど開発をするようになったのは高専に入ってから</ul>
-                            <ul>好きな言語はpythonでその中でもdiscordのBOT開発と機械学習が好き</ul>
-                            <ul>逆に嫌いなのはweb開発とJavaScript</ul>
-                        </li></ul>
+                        <ul><h4>技術関連<h4></ul>
                         <ul>
                             <li>
-                                <p>趣味</p>
+                                <ul>もともと中3のときからpythonを勉強してはいたけど開発をするようになったのは高専に入ってから</ul>
+                                <ul>好きな言語はpythonでその中でもdiscordのBOT開発と機械学習が好き</ul>
+                                <ul>逆に嫌いなのはweb開発とJavaScript</ul>
+                            </li>
+                        </ul>
+                        <ul><h4>趣味</h4></ul>
+                        <ul>
+                            <li>
                                 <ul>ゲームとプログラミングが趣味</ul>
                                 <ul>艦これと音ゲーは神だと思う</ul>
                             </li>
@@ -50,7 +51,13 @@
                 <div class="uk-section uk-section-secondary uk-section-small">
                     <h2>2.使ってきた言語(軽くできる物も含む</h2>
                     <li>
-                        <ul>Python, Kotlin, Dart, Java, C++, C#, (マークアップ言語も含むならHTML, CSS)</ul>
+                        <ul>Python/Kotlin/Dart/Java/C++/C#(マークアップ言語も含むならHTML, CSS)</ul>
+                        <ul>
+                            <ul><h5>その他使ったもの</h5></ul>
+                            <li>
+                                <ul>Django/Chainer/Unity/AndroidStudio/Flutter/Docker</ul>
+                            </li>
+                        </ul>
                     </li>
                 </div>
                 <p></p>
@@ -64,6 +71,7 @@
                         <ul>茨城高専の休講情報+お知らせ取得アプリ(Java->AndroidStudio)</ul>
                         <ul>高齢者見守りスマートスピーカー(Python->discord.py)</ul>
                         <ul>ゲーム用マッチングアプリ(Dart->Flutter)</ul>
+                        <ul>艦これのキャラ判別機(Python->Chainer)</ul>
                     </li>
                     <p>一部を除くコードが置いてあるGitHubは<a href="https://github.com/isso0424">ここ</a></p>
                 </div>
