全部大文字で書くか小文字で書くか統一しろ

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <ul>
                             <li>
                                 <ul>もともと中3のときからpythonを勉強してはいたけど開発をするようになったのは高専に入ってから</ul>
-                                <ul>好きな言語はpythonでその中でもdiscordのBOT開発と機械学習が好き</ul>
+                                <ul>好きな言語はpythonでその中でもdiscordのBot開発と機械学習が好き</ul>
                                 <ul>逆に嫌いなのはweb開発とJavaScript</ul>
                             </li>
                         </ul>
@@ -79,8 +79,8 @@
                 <div class="uk-section uk-section-secondary uk-section-small">
                     <h2>4.外部リンク</h2>
                     <li>
-                        <ul>twitter: <a href="https://twitter.com/kousou4129">@kousou4129</a></ul>
-                        <ul>github: <a href="https://github.com/isso0424">isso0424</a></ul>
+                        <ul>Twitter: <a href="https://twitter.com/kousou4129">@kousou4129</a></ul>
+                        <ul>GitHub: <a href="https://github.com/isso0424">isso0424</a></ul>
                     </li>
                 </div>
             </div>
