[Del]Delete js/ and css/

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="chrome">
         <title>いっそうのぽーとふぉりお</title>
-        <script src="js/uikit.min.js"></script>
-        <script src="js/uikit-icons.min.js"></script>
-        <link rel="stylesheet" href="css/with-out-dot.css">
-        <link rel="stylesheet" href="css/uikit-rtl.min.css">
+        <!-- UIkit CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/css/uikit.min.css" />
+        
+        <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit-icons.min.js"></script>
     </head>
     <body class="uk-section  uk-padding-remove-vertical" >
         <!-- ヘッダー部分 -->
