--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
                         <ul><h4>概要</h4></ul>
                         <ul>
                             <li>
-                                <ul>趣味でプログラミングをしてる高専一年生</ul>
+                                <ul>趣味でプログラミングをしてる高専二年生</ul>
                             </li>
                         </ul>
                         <ul><h4>技術関連<h4></ul>
                         <ul>
                             <li>
                                 <ul>もともと中3のときからpythonを勉強してはいたけど開発をするようになったのは高専に入ってから</ul>
-                                <ul>好きな言語はpythonでその中でもdiscordのBot開発と機械学習が好き</ul>
-                                <ul>逆に嫌いなのはweb開発とJavaScript</ul>
+                                <ul>おれ。ぴちょん、きらい</ul>
                             </li>
                         </ul>
                         <ul><h4>趣味</h4></ul>
