--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 <div class="uk-section uk-section-secondary uk-section-small">
                     <h2>2.使ってきた言語(軽くできる物も含む</h2>
                     <li>
-                        <ul>Python/Kotlin/Dart/Java/C++/C#(マークアップ言語も含むならHTML, CSS)</ul>
+                        <ul>Python/Kotlin/Dart/Java/Rust/Golang/TypeScript(マークアップ言語も含むならHTML, CSS)</ul>
                         <ul>
                             <ul><h5>その他使ったもの</h5></ul>
                             <li>
-                                <ul>Django/Chainer/Unity/AndroidStudio/Flutter/Docker</ul>
+                                <ul>Django/Chainer/Unity/AndroidStudio/Flutter</ul>
                             </li>
                         </ul>
                     </li>
@@ -73,6 +73,7 @@
                         <ul>高齢者見守りスマートスピーカー(Python->discord.py)</ul>
                         <ul>ゲーム用マッチングアプリ(Dart->Flutter)</ul>
                         <ul>艦これのキャラ判別機(Python->Chainer)</ul>
+                        <ul>ほかいっぱい</ul>
                     </li>
                     <p>一部を除くコードが置いてあるGitHubは<a href="https://github.com/isso0424">ここ</a></p>
                 </div>
